# f2021-stat39000-project7

./: .gitignore  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
scripts/: Justin_Mathew.py  Noah_Barker.py  Veronica_Fulbright.py  aidan_kaczanowski.py  ben_moorman.py  darren_iyer.py  kelly_addison.py  kenneth_cox.py  kevin_amstutz.py  laura_humphrey.py  maggie_wade.py
scripts/.ipynb_checkpoints/: Maxwell_Low-checkpoint.py  elise_miller-checkpoint.py  nicolas_newman-checkpoint.py  raunak_srivastava-checkpoint.py  robert_sego-checkpoint.py  runme-checkpoint.py  trevor_teague-checkpoint.py
tdm_media/imdb/: __init__.py  imdb.py  imdb_queries.sql
tdm_media/imdb/.ipynb_checkpoints/: imdb-checkpoint.py  imdb_queries-checkpoint.sql
