[tool.poetry]
name = "f2021-stat39000-project7"
version = "0.1.0"
description = "Fun package for fun media things."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
aiosql = "^3.3.1"
pandas = "^1.3.3"
thedatamine = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
